--- a/project.html
+++ b/project.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-    Identity by HTML5 UP
-    html5up.net | @n33co
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
     <head>
         <title>Nuvi Pannu | Projects</title>
@@ -22,15 +17,15 @@
 
                 <!-- Main -->
                     <div class="projectBox">
-                        <h1>INSTASCOPE</h1>
+                        <a href="https://instascope.meteor.com" target="_blank"><h1>INSTASCOPE</h1></a>
                     </div>
 
                     <div class="projectBox">
-                        <h1>JUDGEMENTAL EYE</h1>
+                        <a href="https://github.com/nuvipannu/judgemental-eye" target="_blank"><h1>JUDGEMENTAL EYE</h1></a>
                     </div>
 
                     <div class="projectBox">
-                        <h1>FRESH TOMATOES</h1>
+                        <a href="https://github.com/nuvipannu/fresh-tomatoes" target="_blank"><h1>FRESH TOMATOES</h1></a>
                     </div>
                 <!-- Footer -->
                     <footer id="footer">
